Ingress/NGINX/hello-world-ingress-secret.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
  - hosts:
    - hello-world-ingress.jye.com
    secretName: tls-secret
  rules:
  - host: hello-world-ingress.jye.com
    http:
      paths:
      - backend:
          service:
            name: aks-helloworld-one
            port: 
              number: 80
        path: /hello-world-one(/|$)(.*)
        pathType: Prefix
      - backend:
          service: 
            name: aks-helloworld-two
            port: 
              number: 80
        path: /hello-world-two(/|$)(.*)
        pathType: Prefix
      - backend:
          service: 
            name: aks-helloworld-one
            port: 
              number: 80
        path: /(.*)
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress-static
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
  - hosts:
    - hello-world-ingress.jye.com
    secretName: tls-secret
  rules:
  - host: hello-world-ingress.jye.com
    http:
      paths:
      - backend:
          service:
            name: aks-helloworld-one
            port: 
              number: 80
        path: /static(/|$)(.*)
        pathType: Prefix
